# BioClaw

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
bioclaw_symbolic/: __init__.py  audit.py  cli.py  entity_audit.py  evidence.py  hypothesis.py  mork.py  omegaclaw.py  path_audit.py  reasoning.py  report.py  schema.py  schema_path.py  schema_policy.py  yaml_compat.py
config/: reasoning.yaml  schema_roles.yaml
docs/: bioclaw_omegaclaw_evaluation.docx  bioclaw_omegaclaw_evaluation.html  bioclaw_omegaclaw_evaluation.md  paper.css
examples/: ppi-edge.json
overlay/: annotation-prompt.txt  assistant-prompt.txt  bioclaw-entrypoint.sh  conductor-prompt.txt  conflict-prompt.txt  explanation-prompt.txt  lib_llm_ext.py  provenance-prompt.txt  query-prompt.txt  reasoner-prompt.txt  relation-prompt.txt  specialist-prompt.txt
overlay/channels/: internal_rpc.py  irc.py
overlay/config/: data_sources.yaml  reasoning.yaml  schema.yaml
overlay/core/: loop.metta
overlay/src/: biokg.py  channels.metta  helper.py  interpretation.py  peers.py  router.py  skills.metta
scripts/: bioclaw-sentinel-check.sh  bioclaw-up  bootstrap.sh
tests/: test_symbolic_core.py
