[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bioclaw-symbolic"
version = "0.1.0"
description = "Symbolic evidence layer for MORK BioAtomspace"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
bioclaw-symbolic = "bioclaw_symbolic.cli:main"

[tool.setuptools.packages.find]
include = ["bioclaw_symbolic*"]
